third_party/move/move-compiler-v2/tests/more-v1/typing/constraints_not_satisfied_type_annotation.exp

Diagnostics:
error: type `R` is missing required ability `copy`
  ┌─ tests/more-v1/typing/constraints_not_satisfied_type_annotation.move:7:31
  │
2 │     struct CupC<T: copy> { f: T }
  │                 - declaration of type parameter `T`
  ·
7 │         ignore((abort 0: CupC<R>));
  │                               ^
  │
  = required by instantiating type parameter `T:copy` of struct `CupC`

warning: Unnecessary trailing semicolon
  ┌─ tests/more-v1/typing/constraints_not_satisfied_type_annotation.move:7:35
  │
7 │         ignore((abort 0: CupC<R>));
  │         --------------------------^
  │         │                         │
  │         │                         A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  │         Any code after this expression will not be reached
